# nous

./: LICENSE  README.md  nous.cabal
src/: Main.hs
src/Parse/: Parse.hs
tests/test-files/: Logic.noem
