name:                nous
version:             0.1.0.0
synopsis:            A Phenomenological Programming Language.
description:         Please see README.md
homepage:            https://github.com/niho/nous
license:             MIT
license-file:        LICENSE
author:              Niklas Holmgren
maintainer:          niklas.holmgren@gmail.com
copyright:           2016 Niklas Holmgren
category:            Compiler, Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nous
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
    Parse.Parse
  build-depends:
    base >= 4.7 && < 5,
    parsec

source-repository head
  type:     git
  location: https://github.com/niho/nous
